# malfoyc

./: Makefile  README  equals.amac  equals.asym  equals.ds  malfoyc.cabal  max.amac  max.asym  max.ds  minus.amac  minus.ds  multiplication.amac  multiplication.asym  multiplication.ds  simple.amac  simple.asym  simple.ds
samples/: arithmetic.mf  better_fib.mf  dups.mf  easy.mf  equals.mf  factorial.mf  fibonacci.mf  functions.mf  let.mf  max.mf  minus.mf  multiplication.mf  quadratic.mf  quadruple.mf  simple.mf
src/: Main.hs
src/Language/Malfoy/: Lexer.x  Parser.y  Syntax.hs
src/MalfoyCompiler/: Assembly.hs  CodeGenerator.hs  Compiler.hs  Error.hs  Graph.hs  GraphViz.hs  Opcodes.hs  Optimizer.hs  Simplifier.hs  Simulator.hs
src/MalfoyCompiler/CodeGenerator/: Monad.hs
src/MalfoyCompiler/Simulator/: Monad.hs  Operators.hs  Types.hs
